added Instrument and everything around
